Etar: RaiseNOW: Import our apps icon
Co-authored-by: Jim Wu <mlgmxyysd@meowcat.org>
Co-authored-by: Col_or <1638876934@qq.com>
Signed-off-by: minarypenguin <alexfinhart@gmail.com>

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -18,7 +18,7 @@
 */
 -->
 <resources>
-
+    <color name="ic_launcher_background">#D0765A</color>
     <color name="colorPrimary">#41c3b1</color>
     <color name="colorPrimaryDark">#388d7f</color>
     <color name="colorAccent">#1dc1ab</color>
